# ZenetHunter

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTIVE_DEFENSE_REFACTOR.md  CHANGELOG.md  CLI_SHUTDOWN_FIX.md  CODEBASE_AUDIT.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  DATABASE_MIGRATION_REQUIRED.md  DATABASE_SCHEMA_FIX.md  DOCS_REORGANIZATION.md  DOCUMENTATION_SUMMARY.md  ENVIRONMENT_SETUP.md  FINAL_FIXES.md  FINAL_FIXES_SUMMARY.md  FINAL_SESSION_REPORT.md  FORCE_SHUTDOWN_GUIDE.md  HYBRID_SCAN_PROGRESS.md  IDE_IMPORT_FIX.md  IMPORT_ERRORS_FIX.md  PORT_FIX_GUIDE.md  PR#41.md  PROJECT_AUDIT_CHECKLIST.md  README-MACOS.zh-CN.md  README-WINDOWS.md  README-WINDOWS.zh-CN.md  README.ja-JP.md  README.ko-KR.md  README.md  README.ru-RU.md  README.zh-CN.md  READY_TO_TEST.md  SCAN_FIX_REPORT.md  SCAN_PERFORMANCE_FIX.md  SECURITY.md  (+15 more)
.github/: settings.yml  (+1 more)
backend/: .coveragerc  .dockerignore  README.md  README.zh-CN.md  alembic.ini  coverage.xml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260117_1000_001_initial_schema.py  20260126_1500_002_add_manual_override.py  20260212_1700_003_add_user_accounts_and_probe_tables.py
backend/app/: __init__.py  init.py  main.py
backend/app/application/: __init__.py
backend/app/bootstrap/: __init__.py  app_factory.py  lifecycle.py
backend/app/core/: config.py  database.py  exceptions.py  init.py  logging.py  middleware.py  security.py
backend/app/data/: __init__.py  keyword_dictionary.yaml
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py  runtime_checks.py
backend/app/maintenance/: reset_runtime_data.py
backend/app/models/: attack.py  auth.py  defender.py  device.py  log.py  manual_profile.py  observation.py  router_integration.py  scan.py  scheduler.py  setup.py  topology.py  webhook.py  wpa3.py
backend/app/providers/: __init__.py
backend/data/: zenethunter.db
backend/scripts/: README.md  README.zh-CN.md  check_runtime.py  i18n_helper.py  oui.txt  update_vendor_db.py
backend/tests/: conftest.py  test_arp_monitor.py  test_attack.py  test_auth.py  test_config.py  test_defender.py  test_defender_service.py  test_defense_engine.py  test_device_model_lookup.py  test_devices.py  test_dns_rpz.py  test_dummy_defense_engine.py  test_engine.py  test_errors.py  test_exceptions.py  test_fingerprint_normalizer.py  test_healthz.py  test_integration_router.py  test_keyword_dictionary.py  test_logs.py  test_manual_profile_binding.py  test_manual_profiles.py  test_middleware.py  test_observations.py  test_policy_selector.py  test_scan.py  test_scan_workflow.py  test_scanner_service.py  test_scapy_engine.py  test_scheduler_schema.py  test_scheduler_telemetry_injection.py  test_scheduler_wireup.py  test_tarpit.py  test_tcp_reset.py  test_telemetry.py  test_topology.py  test_walled_garden.py  test_webhooks.py  test_wpa3.py  test_ws_events.py  (+1 more)
(+319 files in other folders)
